[package]
name = "miette-syntect"
authors = ["Adam Curtis <kallisti.dev@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.7"
syntect = { version = "5.0", default-featurees = false, features = ["default-fancy"] }

