[package]
name = "miette-syntect"
authors = ["Adam Curtis <kallisti.dev@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.7"
once_cell = "1.17.1"
syntect = "5.0"

[dev-dependencies]
thiserror = "1.0.40"
miette = { version = "5.7", features = ["fancy"]}

