[package]
name = "miette-syntect"
authors = ["Adam Curtis <kallisti.dev@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.12.1"
indexmap = "1.9.3"
itertools = "0.10.5"
miette = "5.7"
once_cell = "1.17.1"
shared_arena = "0.8.4"
syntect = {version = "5.0", default-features = false, features = ["default-fancy"]}

[dev-dependencies]
thiserror = "1.0.40"
miette = { version = "5.7", features = ["fancy"]}

